完成了基本的文件上传功能（静态文件）以及getUser中间件
